# CppUtils

./: .gitignore  CppUtils.sln  CppUtils.vcxproj  CppUtils.vcxproj.filters  Graphics.vcxproj  README.md  build_all.ps1
Graphics/: Factory.cpp  Factory.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Graphics1.cpp
Media/: AudioFile.h  H264Encoder.cpp  H264Encoder.h
Utils/: Clipboard.cpp  Convert.cpp  DataPack.cpp  DateTime.h  Event.cpp  File.cpp  Guid.cpp  HttpHelper.cpp  HttpHelper1.cpp  HttpHelperExp.cpp  Process.cpp  Process.h  ProcessOperator.cpp  ProcessOperator.h  Registry.cpp  Registry.h  SqliteHelper.h  StringHelper.cpp  Thread.h  Utils.cpp  Utils.h  defines.h
Utils/sqlite/: sqlite3.h
Utils/zlib/: adler32.c  compress.c  crc32.c  crc32.h  deflate.c  deflate.h  gzguts.h  infback.c  inffast.c  inffixed.h  inflate.c  inflate.h  inftrees.c  trees.c  trees.h  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
Utils/zlib/zlib_cpp/: CMakeLists.txt
Utils/zlib/zlib_cpp/include/: zchecksum.hpp  zcompressor.hpp  zdecompressor.hpp  zlib_cpp.hpp  zstream.hpp
Utils/zlib/zlib_cpp/src/: zchecksum.cpp  zcompressor.cpp  zdecompressor.cpp  zstream.cpp
UtilsTest/: UtilsTest.cpp  UtilsTest.vcxproj
include/Graphics/: Factory.h  Graphics.h  Graphics1.h
include/PML/: PML.h  (+2 more)
nuget/: pack.ps1
xbyak/: xbyak.h
zlib_cpp/: README.md  ZlibBase.cpp  ZlibBase.h  ZlibBase_Fixed.cpp  ZlibCompressor.cpp  ZlibCompressor.h  ZlibCpp.h  ZlibDecompressor.cpp  ZlibDecompressor.h  ZlibException.h  ZlibUtils.cpp  ZlibUtils.h  main.cpp  zlib_cpp.sln  zlib_cpp.vcxproj  zlib_cpp.vcxproj.filters
(+13 files in other folders)
